# rtree_performance

./: Cargo.toml
benches/: benchmark_build.rs  benchmark_query.rs
benches/utils/: mod.rs
src/: coordinate.rs  flatbush.rs  from_wkt.rs  hilbert.rs  lib.rs  packed_rtree.rs  packed_rtree_auto_simd.rs  packed_rtree_native.rs  packed_rtree_unsorted.rs  packed_rtree_unsorted_tracked.rs  rectangle.rs  rtree.rs  seg_rtree.rs  sorted_packed_rtree.rs  test_loops.rs  tests.rs  utils.rs
tests/: test_utils.rs  wkt_tests.rs
