[package]
name = "rtree_performance"
version = "0.1.0"
authors = ["James Gill <jagill@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wkt = "^0.8"

[dev-dependencies]
criterion = "^0.3"
rand = {version = "0.7", features=["small_rng"]}

[[bench]]
name = "benchmark_build"
harness = false

[[bench]]
name = "benchmark_query"
harness = false